workloads/teamspeak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamspeak
  labels:
    app: teamspeak
spec:
  type: ClusterIP
  selector:
    app: teamspeak
  ports:
    - port: 9987
      targetPort: 9987
      protocol: UDP
      name: voice
    - port: 30033
      targetPort: 30033
      protocol: TCP
      name: file-transfer
---
apiVersion: v1
kind: Service
metadata:
  name: ts-voice
  annotations:
    metallb.io/loadBalancerIPs: "192.168.6.15,fd00:6::15"
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies: [IPv4, IPv6]
  type: LoadBalancer
  ports:
  - port: 9987
    targetPort: 9987
    nodePort: 30087
    protocol: UDP

  selector:
    app: teamspeak
---
apiVersion: v1
kind: Service
metadata:
  name: ts-files
  annotations:
    metallb.io/loadBalancerIPs: "192.168.6.16,fd00:6::16"
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies: [IPv4, IPv6]
  type: LoadBalancer
  ports:
  - port: 30033
    targetPort: 30033
    nodePort: 30034
    protocol: TCP

  selector:
    app: teamspeak
