workloads/teamspeak/ingress.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: teamspeak-fileserver
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: teamspeak-tcp
  rules:
    - backendRefs:
        - name: teamspeak
          port: 30033
